增加摄像头设备校验；增加中英文多语言支持；增加吐司风格统一

--- a/imagepicker/src/main/res/values/strings.xml
+++ b/imagepicker/src/main/res/values/strings.xml
@@ -10,4 +10,8 @@
     <string name="ip_photo_crop">图片裁剪</string>
     <string name="ip_origin">原图</string>
     <string name="ip_origin_size">原图(%1$s)</string>
+    <string name="ip_str_no_camera">没有检测到摄像头</string>
+    <string name="ip_str_capture">拍摄照片</string>
+    <string name="ip_str_choose">选择</string>
+    <string name="ip_str_picture">图片</string>
 </resources>
