--- a/imagepicker/src/main/res/values-en/strings.xml
+++ b/imagepicker/src/main/res/values-en/strings.xml
@@ -14,4 +14,6 @@
     <string name="ip_str_capture">Capture</string>
     <string name="ip_str_choose">Choose</string>
     <string name="ip_str_picture">Picture</string>
+    <string name="ip_str_no_permission">No permission</string>
+    <string name="ip_str_no_camera_permission">No camera permission</string>
 </resources>
