优化直接拍照逻辑；发布1.0.2版本

--- a/imagepicker/src/main/res/values-en/strings.xml
+++ b/imagepicker/src/main/res/values-en/strings.xml
@@ -15,5 +15,5 @@
     <string name="ip_str_choose">Choose</string>
     <string name="ip_str_picture">Picture</string>
     <string name="ip_str_no_permission">No permission</string>
-    <string name="ip_str_no_camera_permission">No camera permission</string>
+    <string name="ip_str_no_camera_permission">No permission to capture photo</string>
 </resources>
