--- a/imagepicker/src/main/res/values/strings.xml
+++ b/imagepicker/src/main/res/values/strings.xml
@@ -16,4 +16,8 @@
     <string name="ip_str_picture">图片</string>
     <string name="ip_str_no_permission">权限被禁止，无法选择本地图片</string>
     <string name="ip_str_no_camera_permission">权限被禁止，无法拍照</string>
+    <string name="ip_str_tips">提示</string>
+    <string name="ip_need_to_del">要删除这张照片吗？</string>
+    <string name="ip_cancel">取消</string>
+    <string name="ip_str_confirm">确定</string>
 </resources>
